Quorum/Library/Tests/TypeChecker/Pass/ExpAssignBooleanBoolObjField.quorum
class Main
    Boolean b
    boolean bool = false
    action Main
        b:SetValue(true)
        bool = cast(boolean, b)
        if bool = true
            output "passed"
        end
    end
end